--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Document metadata -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Link to external stylesheet -->
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Title of the HTML document -->
     <title>Tracker-of-production-v.2</title>
   </head>
   <body>
+    <!-- Table for production tracking -->
     <table>
       <tr>
         <th>Number of boxes produced</th>
@@ -16,14 +22,18 @@
         <th>Remaining quantity</th>
       </tr>
     </table>
+
+    <!-- Container div for buttons -->
     <div id="container">
       <div id="order">
+        <!-- Buttons for adding, canceling addition, and restarting -->
         <button id="add">Add</button>
         <button id="cancel">Cancel addition</button>
         <button id="restart">Restart</button>
       </div>
     </div>
 
+    <!-- Link to external JavaScript file -->
     <script src="main.js"></script>
   </body>
 </html>
