--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- Title of the HTML document -->
-    <title>Tracker-of-production-v.2</title>
+    <title>Tracker of production v.2</title>
   </head>
   <body>
     <!-- Table for production tracking -->
